tests/rustdoc-ui/issues/ice-impl-fn-generic-105737.rs
// https://github.com/rust-lang/rust/issues/105737
impl Vec<lol> {}
//~^ ERROR

pub fn lol() {}
